--- a/index.html
+++ b/index.html
@@ -33,7 +33,14 @@
     <section id="landing" onmousemove="moveBackground(event)">
         <img src="assets/popcorn-clipart-simple-4.png" class="shape shape--0">
         <img src="assets/soda-clipart-movie-theater-2.png" class="shape2 shape--1">
-        <!-- Add more shape elements here -->
+        <img src="assets/popcorn-clipart-simple-4.png" class="shape shape--2">
+        <img src="assets/soda-clipart-movie-theater-2.png" class="shape2 shape--3">
+        <img src="assets/popcorn-clipart-simple-4.png" class="shape shape--4">
+        <img src="assets/soda-clipart-movie-theater-2.png" class="shape2 shape--5">
+        <img src="assets/popcorn-clipart-simple-4.png" class="shape shape--6">
+        <img src="assets/soda-clipart-movie-theater-2.png" class="shape2 shape--7">
+        <img src="assets/popcorn-clipart-simple-4.png" class="shape shape--8">
+        
         <div class="container">
             <div class="row">
                 <div class="search__wrapper">
