--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     </div>
 
     <div id="content">  
-        <section>
+        <section class="nav-search__background-img2">
             <nav>
                 <figure>
                     <img id="personal-logo" src="assets/LOGO.png" alt="">
@@ -31,7 +31,17 @@
             </nav>
         </section>
         
-        <section>
+        <section id="landing" onmousemove="moveBackground(event)">
+        <img src="assets/popcorn-clipart-simple-4.png" class="shape shape--0">
+        <img src="assets/soda-clipart-movie-theater-2.png" class="shape2 shape--1">
+        <img src="assets/popcorn-clipart-simple-4.png" class="shape shape--2">
+        <img src="assets/soda-clipart-movie-theater-2.png" class="shape2 shape--3">
+        <img src="assets/popcorn-clipart-simple-4.png" class="shape shape--4">
+        <img src="assets/soda-clipart-movie-theater-2.png" class="shape2 shape--5">
+        <img src="assets/popcorn-clipart-simple-4.png" class="shape shape--6">
+        <img src="assets/soda-clipart-movie-theater-2.png" class="shape2 shape--7">
+        <img src="assets/popcorn-clipart-simple-4.png" class="shape shape--8">
+
             <div class="movie__info--row">
                 <div class="movie__info--container">
                     <!-- Move content @script.js -->
@@ -39,8 +49,7 @@
             </div>
         </section>
     </div>
-
+    <script src="script.js"></script>
     <script src="index.js"></script>
-    <script src="script2.js"></script>
 </body>
 </html>
