--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styles.css">
+    <script
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
+      crossorigin="anonymous"
+    ></script>
 </head>
 <body>
     <div class="overlay" id="overlay">
@@ -42,6 +46,9 @@
                             <input type="text" id="searchInput" class="search__bar" placeholder="Search Movie Title">
                             <button class="input__btn" id="searchButton">
                                 Search
+                            </button>
+                            <button class="input__btn" id="magnifyButton">
+                                <i class="fab fa-searchengin"></i>
                             </button>
                         </div>
                     </div>
